<resources>
    <string name="app_name">FilmApplication</string>

    <string name="search_type_header">Что ищем?</string>
    <string name="search_type_all">Всё</string>
    <string name="search_type_films">Фильмы</string>
    <string name="search_tv_show">ТВ шоу</string>
    <string name="search_rating_header">Какой рейтинг?</string>
    <string name="search_rating_hint">рейтинг</string>
    <string name="search_from_text">от</string>
    <string name="search_to_text">до</string>
    <string name="search_year_header">Какой год?</string>
    <string name="search_year_hint">год</string>
    <string name="search_submit">Искать</string>
    <string name="searchTitle">Поиск</string>
    <string name="year_from_more_than_to">Год \"от\" не может быть больше чем \"до\"</string>
    <string name="saerch_success">Поиск произведён</string>

    <string name="top_film_search">Поиск</string>
    <string name="top_films_favorites">Избранное</string>
    <string name="top_film_error">Что то пошло не так</string>


    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>