<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/searchBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="match_parent"
        android:text="@string/searchTitle"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_height="@dimen/toolbar_height" />

    <ScrollView
        android:id="@+id/searchScroll"
        android:layout_marginTop="@dimen/toolbar_height"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/searchTypeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/search_type_header"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioGroup
                android:id="@+id/searchTypeGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchTypeHeader">

                <RadioButton
                    android:id="@+id/searchTypeAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/search_type_all" />

                <RadioButton
                    android:id="@+id/searchTypeFilms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_type_films" />

                <RadioButton
                    android:id="@+id/searchTypeTvShow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tv_show" />
            </RadioGroup>

            <TextView
                android:id="@+id/searchRatingHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/search_rating_header"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchTypeGroup" />

            <Spinner
                android:id="@+id/searchRatingFromSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/ratings"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/searchRatingFromText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchRatingFromText"
                app:layout_constraintTop_toTopOf="@+id/searchRatingFromText" />

            <TextView
                android:id="@+id/searchRatingFromText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/search_from_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchRatingHeader" />

            <Spinner
                android:id="@+id/searchRatingToSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/ratings"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/searchRatingToText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/searchRatingFromSpinner"
                app:layout_constraintTop_toTopOf="@+id/searchRatingToText" />

            <TextView
                android:id="@+id/searchRatingToText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/search_to_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchRatingFromText" />

            <TextView
                android:id="@+id/searchYearHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/search_year_header"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchRatingToText" />

            <EditText
                android:id="@+id/searchYearFromEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/search_year_hint"
                android:inputType="number"
                android:maxLength="4"
                app:layout_constraintBottom_toBottomOf="@+id/searchYearFromText"
                app:layout_constraintStart_toEndOf="@+id/searchYearFromText"
                app:layout_constraintTop_toTopOf="@+id/searchYearFromText" />

            <TextView
                android:id="@+id/searchYearFromText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/search_from_text"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchYearHeader" />

            <EditText
                android:id="@+id/searchYearToEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search_year_hint"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/searchYearToText"
                app:layout_constraintStart_toStartOf="@+id/searchYearFromEdit"
                app:layout_constraintTop_toTopOf="@+id/searchYearToText" />

            <TextView
                android:id="@+id/searchYearToText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/search_to_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchYearFromText" />

            <Button
                android:id="@+id/searchSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/search_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchYearToText"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/searchProgressView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/searchProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

</FrameLayout>